<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_tasks_input_text_view">Input My Tasks Name</string>
    <string name="add_tasks_button">Add Tasks</string>
    <string name="show_all_tasks_button">All Tasks</string>
    <string name="avatar_of_user">Avatar of user</string>
    <string name="add_tasks_title">Add Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_description_input">Task Description</string>
    <string name="null_string">\"\"</string>
    <string name="all_tasks">All Tasks</string>
    <string name="username_text_view">Username</string>
    <string name="save_button">Save</string>
    <string name="settings_button">"Send user to settings page."</string>
    <string name="task_description_text_view">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="no_task_name"> No Task Name</string>
    <string name="no_task_description">No task description available.</string>
    <string name="blank_task_name">Blank Task Name</string>
    <string name="state">Task State</string>
    <string name="team_name">Team Name</string>
    <string name="settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="signup_page">Signup Page</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="Login">Login</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">Logout</string>
    <string name="filter_tasks_by_teams">Filter Tasks By Teams</string>
    <string name="save_filter">Save Filter</string>
    <string name="task_image">Task Image</string>
    <string name="task_image_detail">The image for task being viewed</string>
</resources>